@@ -13,6 +13,7 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql
+  encoding: utf8
   database: <%= app_name %>_development
   username: root
   password:
@@ -27,6 +28,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql
+  encoding: utf8
   database: <%= app_name %>_test
   username: root
   password:
@@ -38,6 +40,7 @@ test:
 
 production:
   adapter: mysql
+  encoding: utf8
   database: <%= app_name %>_production
   username: root
   password: 
